--- a/test.plist
+++ b/test.plist
@@ -11,7 +11,7 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>https://github.com/alinmoon/filepot/blob/master/test.ipa</string>
+<string>https://github.com/alinmoon/filepot/blob/master/r1.1.ipa</string>
 </dict>
 <dict>
 <key>kind</key>
