--- a/test2.plist
+++ b/test2.plist
@@ -11,7 +11,7 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>https://files.ruzuo.cn/app/r1.1.ipa</string>
+<string>ipa_url</string>
 </dict>
 <dict>
 <key>kind</key>
